# Agent-Monitor-TUI

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  result
.antigravitycli/: 5d3b1e0e-de4d-4c66-8986-9b7d7ccb1b75.json
.github/workflows/: release.yml
src/: app.rs  data.rs  main.rs  store.rs  theme.rs  ui.rs  watcher.rs
