[package]
name = "agent-monitor-tui"
version = "0.0.2"
edition = "2021"
description = "AgentMonitorTUI — passive, lazydocker-style TUI for monitoring Claude Code sessions"
license = "MIT"

[[bin]]
name = "agentmonitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
