[package]
name = "agent-monitor-tui"
version = "0.0.5"
edition = "2021"
description = "AgentMonitorTUI — passive, lazydocker-style TUI for monitoring Claude Code sessions"
license = "MIT"
repository = "https://github.com/BenCurrie42/Agent-Monitor-TUI"
homepage = "https://github.com/BenCurrie42/Agent-Monitor-TUI"
readme = "README.md"
keywords = ["tui", "claude", "ai", "monitor", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["flake.nix", "flake.lock", ".claude/", "memory/"]

[[bin]]
name = "agentmonitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
